syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "UserProto";

package tpa.network.userservice;

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string password_hash = 4;
}

service UserQueryService {
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
}

service UserCommandService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message GetAllUsersRequest {}

message GetAllUsersResponse {
  repeated User users = 1;
}

message GetUserByIdRequest {
  string id = 1;
}

message GetUserByIdResponse {
  optional User user = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  optional User user = 1;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message CreateUserResponse {
  string id = 1;
}
